<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.ligoj.bootstrap</groupId>
		<artifactId>bootstrap-business-parent</artifactId>
		<version>2.3.1</version>
		<relativePath />
	</parent>

	<groupId>org.ligoj.api</groupId>
	<artifactId>parent</artifactId>
	<version>2.4.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Ligoj - API Parent</name>
	<description>API Parent pom for all plugin components</description>

	<properties>
		<api.version>2.4.2-SNAPSHOT</api.version>
		<jdk.version>9</jdk.version>
		<jdk.release>9</jdk.release>
	</properties>

	<profiles>
		<profile>
			<id>bintray</id>
			<distributionManagement>
				<repository>
					<id>bintray-ligoj-maven-repo</id>
					<url>https://api.bintray.com/maven/ligoj/maven-repo/ligoj-api/;publish=1</url>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>
	<scm>
		<connection>scm:git:https://github.com/ligoj/ligoj-api</connection>
		<developerConnection>scm:git:https://github.com/ligoj/ligoj-api</developerConnection>
		<url>https://github.com/ligoj/ligoj-api.git</url>
	</scm>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${plugin.compiler}</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<release>${jdk.release}</release>
						<encoding>${encoding.java}</encoding>
						<compilerArgs>
							<arg>-Xlint:all,-options,-path</arg>
							<arg>-parameters</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.junit.platform</groupId>
							<artifactId>junit-platform-surefire-provider</artifactId>
							<version>${junit.platform.version}</version>
						</dependency>
						<dependency>
							<groupId>org.junit.jupiter</groupId>
							<artifactId>junit-jupiter-engine</artifactId>
							<version>${junit.jupiter.version}</version>
						</dependency>
						<dependency>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm</artifactId>
							<version>${asm.version}</version>
						</dependency>
					</dependencies>
				</plugin>


			</plugins>


		</pluginManagement>
	</build>
</project>
